<resources>
    <string name="app_name">CarCompany</string>
    <string name="cancel">Cancel</string>
    <string name="login_title">The best services for your car</string>
    <string name="user_field">username</string>
    <string name="pass_field">password</string>
    <string name="login_button">LOGIN</string>
    <string name="no_count">create an account</string>
    <string name="forgot_password">Forgot password</string>


    <string-array name="metodospago">
        <item>VISA</item>
        <item>PAYPAL</item>
        <item>MASTERCARD</item>
        <item>BITCOIN</item>
        <item>AMERICAN</item>
    </string-array>

</resources>